Mobile Accordion: working on mobile-title margin issues

--- a/components/_accordion.scss
+++ b/components/_accordion.scss
@@ -61,8 +61,8 @@
     	box-shadow: inset 0 1px 0 #fcfcfc;
 		background: transparent;
 		min-height: 40px;
-		padding: 5px 0;
-		margin: 0;
+		padding: 5px 0 !important;
+		margin: 0 !important;
 
 		&.active {
 			background: #fff;
@@ -70,8 +70,8 @@
 	}
 	
 	div#course-overview, div#agenda, div.instructors {
-		padding: 5px 0;
-		margin: 0;
+		padding: 5px 0 !important;
+		margin: 0 !important;
 	}
 	/* Brochure mobile accordion adjustments in _brochure.scss */
 	/* Pricing mobile accordion styling in _pricing.scss */
@@ -80,7 +80,7 @@
 		h3.mobile-title {
 			height: 40px;
 			padding: 0 5px 0 40px;
-			margin: 0;
+			margin: 0 !important;
 			position: relative;
 			border: none;
 			background: transparent url(https://confluence.engin.umich.edu/download/attachments/30508410/icons-mobile.png) 5px 0 no-repeat;
