--- a/style.css
+++ b/style.css
@@ -1146,14 +1146,14 @@ NEW:
     box-shadow: inset 0 1px 0 #fcfcfc;
     background: transparent;
     min-height: 40px;
-    padding: 5px 0;
-    margin: 0; }
+    padding: 5px 0 !important;
+    margin: 0 !important; }
     div.mobile-accordion.active {
       background: #fff; }
 
   div#course-overview, div#agenda, div.instructors {
-    padding: 5px 0;
-    margin: 0; }
+    padding: 5px 0 !important;
+    margin: 0 !important; }
 
   /* Brochure mobile accordion adjustments in _brochure.scss */
   /* Pricing mobile accordion styling in _pricing.scss */
@@ -1161,7 +1161,7 @@ NEW:
   h3.mobile-title {
     height: 40px;
     padding: 0 5px 0 40px;
-    margin: 0;
+    margin: 0 !important;
     position: relative;
     border: none;
     background: transparent url(https://confluence.engin.umich.edu/download/attachments/30508410/icons-mobile.png) 5px 0 no-repeat;
